--- a/charts/gitlab/templates/deployment.yaml
+++ b/charts/gitlab/templates/deployment.yaml
@@ -28,4 +28,22 @@ spec:
             gitlab_rails['db_database'] = '{{ .Values.global.psql.database }}'
             gitlab_rails['db_username'] = '{{ .Values.global.psql.username }}'
             gitlab_rails['db_password'] = {{ .Values.global.psql.password.secret | quote }}
+            redis['enable'] = false
+            gitlab_rails['redis_host'] = '{{ .Values.global.redis.host }}'
+            gitlab_rails['redis_port'] = {{ .Values.global.redis.port }}
+            {{- if .Values.global.redis.password.secret }}
+            gitlab_rails['redis_password'] = {{ .Values.global.redis.password.secret | quote }}
+            {{- end }}
+            {{- if .Values.global.minio.enabled }}
+            gitlab_rails['lfs_enabled'] = true
+            gitlab_rails['lfs_storage_path'] = '/var/opt/gitlab/gitlab-rails/shared/lfs-objects'
+            gitlab_rails['lfs_object_store_enabled'] = true
+            gitlab_rails['lfs_object_store_connection'] = {
+              'provider' => 'AWS',
+              'endpoint' => 'http://{{ .Values.global.minio.host }}:{{ .Values.global.minio.port }}',
+              'aws_access_key_id' => {{ .Values.global.minio.accessKey.secret | quote }},
+              'aws_secret_access_key' => {{ .Values.global.minio.secretKey.secret | quote }},
+              'path_style' => true
+            }
+            {{- end }}
         resources: {{ toYaml .Values.resources | nindent 12 }}
