--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -14,6 +14,22 @@ global:
     password:
       secret: "{{ .Release.Name }}-postgres-secret"
       key: "password"
+  redis:
+    host: "{{ .Release.Name }}-redis"
+    port: 6379
+    password:
+      secret: "{{ .Release.Name }}-redis-secret"
+      key: "password"
+  minio:
+    enabled: true
+    host: "{{ .Release.Name }}-minio"
+    port: 9000
+    accessKey:
+      secret: "{{ .Release.Name }}-minio-secret"
+      key: "accessKey"
+    secretKey:
+      secret: "{{ .Release.Name }}-minio-secret"
+      key: "secretKey"
 resources:
   limits:
     cpu: "2"
