--- a/charts/nextcloud/templates/ingress.yaml
+++ b/charts/nextcloud/templates/ingress.yaml
@@ -1,16 +1,20 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{ include "gitlab.fullname" . }}
-spec:
-  rules:
-  - host: gitlab.example.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: {{ include "gitlab.fullname" . }}
-            port:
-              number: {{ .Values.service.port }}
+   {{- if .Values.ingress.enabled }}
+   apiVersion: networking.k8s.io/v1
+   kind: Ingress
+   metadata:
+     name: {{ include "nextcloud.fullname" . }}
+     namespace: {{ .Release.Namespace }}
+   spec:
+     ingressClassName: nginx
+     rules:
+     - host: {{ .Values.nextcloud.trustedDomains }}
+       http:
+         paths:
+         - path: /
+           pathType: Prefix
+           backend:
+             service:
+               name: {{ include "nextcloud.fullname" . }}
+               port:
+                 number: 80
+   {{- end }}
