--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -9,7 +9,7 @@ service:
 persistence:
   enabled: true
   size: 10Gi
-  storageClass: standard
+  storageClass: local-path
 postgres:
   username: postgres
   database: mydb
