--- a/charts/postgres/templates/secret.yaml
+++ b/charts/postgres/templates/secret.yaml
@@ -1,9 +1,8 @@
-{{- if not .Values.vault.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "postgres.fullname" . }}-secret
+  name: {{ .Release.Name }}-secrets
 type: Opaque
 data:
-  password: {{ .Values.postgres.password | default "supersecret" | b64enc | quote }}
-{{- end }}
+  postgres-password: {{ .Values.postgres.password | b64enc }}
+  pgadmin-password: {{ .Values.pgadmin.password | b64enc }}
