--- a/charts/postgres/templates/deployment-postgres.yaml
+++ b/charts/postgres/templates/deployment-postgres.yaml
@@ -28,7 +28,7 @@ spec:
         - name: POSTGRES_DB
           value: {{ .Values.postgres.database }}
         volumeMounts:
-        - name: data
+        - name: postgres-data
           mountPath: /var/lib/postgresql/data
       {{- if .Values.metrics.enabled }}
       - name: metrics-exporter
@@ -40,5 +40,11 @@ spec:
           value: "postgresql://{{ .Values.postgres.username }}:{{ .Values.postgres.password }}@localhost:{{ .Values.postgres.port }}/{{ .Values.postgres.database }}?sslmode=disable"
       {{- end }}
       volumes:
-      - name: data
-        emptyDir: {}  # Замените на PersistentVolumeClaim для хранения данных
+      {{- if .Values.persistence.enabled }}
+      - name: postgres-data
+        persistentVolumeClaim:
+          claimName: {{ .Release.Name }}-postgres-pvc
+      {{- else }}
+      - name: postgres-data
+        emptyDir: {}
+      {{- end }}
