--- a/charts/mariadb/Chart.yaml
+++ b/charts/mariadb/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: mariadb
-description: Helm chart for MariaDB with persistence and metrics exporter
+description: Helm chart for MariaDB with persistence
 type: application
 version: 0.1.0
 appVersion: "10.6"
