--- a/charts/kafka/templates/statefulset-kafka.yaml
+++ b/charts/kafka/templates/statefulset-kafka.yaml
@@ -33,10 +33,14 @@ spec:
             cpu: "1000m"
             memory: "2Gi"
         env:
+        - name: KAFKA_BROKER_ID
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['spec.pod.beta.kubernetes.io/statefulset-index']
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: "{{ .Release.Name }}-zookeeper:{{ .Values.zookeeper.port }}"
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: "PLAINTEXT://{{ .Release.Name }}-kafka:{{ .Values.kafka.port }},EXTERNAL://<node-ip>:{{ .Values.kafka.nodePort }}"
+          value: "PLAINTEXT://{{ .Release.Name }}-kafka:{{ .Values.kafka.port }},EXTERNAL://{{ .Values.kafka.nodeIp }}:{{ .Values.kafka.nodePort }}"
         - name: KAFKA_LISTENERS
           value: "PLAINTEXT://0.0.0.0:{{ .Values.kafka.port }},EXTERNAL://0.0.0.0:{{ .Values.kafka.nodePort }}"
         - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
