--- a/charts/kafka/kafka-pv.yaml
+++ b/charts/kafka/kafka-pv.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-pv-{{ .Values.nodeId }}
+  name: kafka-pv-1
   labels:
     app: kafka
-    nodeId: "{{ .Values.nodeId }}"
+    nodeId: "1"
 spec:
   capacity:
-    storage: {{ .Values.persistence.size }}
+    storage: 8Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ .Values.persistence.storageClass }}
+  storageClassName: standard
   hostPath:
-    path: /mnt/kafka-data-{{ .Values.nodeId }}  # Путь на хосте для локального хранилища
+    path: /mnt/kafka
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -21,4 +21,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - {{ .Values.nodeName }}  # Укажите имя ноды
+          - node1
