--- a/charts/kafka/Chart.yaml
+++ b/charts/kafka/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v2
 name: kafka
 description: A Helm chart for Kafka in KRaft mode
 version: 0.1.0
-appVersion: "3.6.0"  # Версия Kafka
+appVersion: "3.6.0"
