--- a/charts/kafka/kafka-pv.yaml
+++ b/charts/kafka/kafka-pv.yaml
@@ -1,24 +1,21 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-pv-1
-  labels:
-    app: kafka
-    nodeId: "1"
+  name: kafka-pv
 spec:
   capacity:
     storage: 8Gi
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: standard
+  storageClassName: local-storage
   hostPath:
-    path: /mnt/kafka
+    path: /mnt/disks/kafka
   nodeAffinity:
     required:
       nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - node1
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - k8s-main
