--- a/charts/kafka/templates/configmap.yaml
+++ b/charts/kafka/templates/configmap.yaml
@@ -5,10 +5,10 @@ metadata:
 data:
   server.properties: |
     process.roles=broker,controller
-    node.id={{ .Values.nodeId }}
-    controller.quorum.voters={{ .Values.controllerQuorumVoters }}
+    node.id={{`{{ .Env.KAFKA_CFG_NODE_ID }}`}}
+    controller.quorum.voters={{ range $i, $e := until (int .Values.replicaCount) }}{{ $i }}@{{ $.Release.Name }}-kafka-{{ $i }}.{{ $.Release.Name }}-kafka-headless.{{ $.Release.Namespace }}.svc.cluster.local:9093{{ if ne $i (sub (int $.Values.replicaCount) 1) }},{{ end }}{{ end }}
     listeners=PLAINTEXT://:9092,CONTROLLER://:9093
-    advertised.listeners=PLAINTEXT://{{ .Release.Name }}-kafka-{{ .Values.nodeId }}.{{ .Release.Name }}-kafka-headless.{{ .Release.Namespace }}.svc.cluster.local:9092
+    advertised.listeners=PLAINTEXT://{{ .Release.Name }}-kafka-{{`{{ .Env.KAFKA_CFG_POD_NAME }}`}}.{{ .Release.Name }}-kafka-headless.{{ .Release.Namespace }}.svc.cluster.local:9092
     listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
     inter.broker.listener.name=PLAINTEXT
     num.partitions=1
