--- a/charts/kafka/templates/pvc.yaml
+++ b/charts/kafka/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-{{ .Release.Name }}-kafka-{{ .Values.nodeId }}
+  name: data-{{ .Release.Name }}-kafka
 spec:
   accessModes:
     - ReadWriteOnce
@@ -9,7 +9,3 @@ spec:
     requests:
       storage: {{ .Values.persistence.size }}
   storageClassName: {{ .Values.persistence.storageClass }}
-  selector:
-    matchLabels:
-      app: kafka
-      nodeId: "{{ .Values.nodeId }}"
