--- a/charts/kafka/templates/service.yaml
+++ b/charts/kafka/templates/service.yaml
@@ -2,25 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}-kafka-headless
-  labels:
-    app: {{ .Release.Name }}-kafka
 spec:
   clusterIP: None
   ports:
-  - port: 9092
-    name: plaintext
-  - port: 9093
-    name: controller
-  selector:
-    app: {{ .Release.Name }}-kafka
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}-kafka
-spec:
-  ports:
-  - port: 9092
-    name: plaintext
+    - port: 9092
+      name: plaintext
+      targetPort: 9092
+    - port: 9093
+      name: controller
+      targetPort: 9093
   selector:
     app: {{ .Release.Name }}-kafka
