--- a/charts/kafka/templates/deployment.yaml
+++ b/charts/kafka/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: kafka
-          image: apache/kafka:{{ .Values.appVersion }}
+          image: apache/kafka:latest
           ports:
             - containerPort: 9092
               name: plaintext
@@ -49,7 +49,3 @@ spec:
         resources:
           requests:
             storage: {{ .Values.persistence.size }}
-        selector:
-          matchLabels:
-            app: kafka
-            nodeId: "{{ .Release.Name }}-kafka-{{ template \"kafka.nodeId\" . }}"
