--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -41,7 +41,7 @@ exporter:
     token: ""
     username: ""
     password: ""
-  server: "http://{{ .Release.Name }}-nextcloud"
+  server: "http://10.66.66.11"
   timeout: "5s"
   enableApps: true
   enableUpdates: true
