--- a/charts/nextcloud/templates/secret.yaml
+++ b/charts/nextcloud/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-nextcloud-secrets
+  name: nextcloud-nextcloud-secrets
 type: Opaque
 data:
   auth-token: {{ .Values.exporter.auth.token | b64enc | quote }}
