--- a/charts/nextcloud/templates/configmap.yaml
+++ b/charts/nextcloud/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-nextcloud-config
+  name: nextcloud-nextcloud-config
 data:
   config.php: |
     <?php
@@ -12,7 +12,7 @@ data:
       'dbhost' => '{{ .Values.externalDatabase.host }}:{{ .Values.externalDatabase.port }}',
       'dbuser' => '{{ .Values.externalDatabase.user }}',
       'dbpassword' => '{{ .Values.externalDatabase.password }}',
-      'overwrite.cli.url' => 'http://{{ .Release.Name }}-nextcloud',
+      'overwrite.cli.url' => 'http://nextcloud-nextcloud.default.svc.cluster.local',
       'installed' => false,
       {{- if .Values.redis.enabled }}
       'memcache.local' => '\\OC\\Memcache\\Redis',
