--- a/charts/nextcloud/templates/pv.yaml
+++ b/charts/nextcloud/templates/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Release.Name }}-nextcloud-pv
+  name: nextcloud-nextcloud-pv
 spec:
   capacity:
     storage: {{ .Values.persistence.size }}
