--- a/charts/nextcloud/templates/service.yaml
+++ b/charts/nextcloud/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-nextcloud
+  name: nextcloud-nextcloud
   labels:
-    app: {{ .Release.Name }}-nextcloud
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app: nextcloud-nextcloud
+    app.kubernetes.io/instance: nextcloud
+    app.kubernetes.io/version: "28.0.0"
+    app.kubernetes.io/managed-by: Helm
 spec:
   type: NodePort
   ports:
@@ -14,11 +14,9 @@ spec:
       port: {{ .Values.nextcloud.port }}
       targetPort: {{ .Values.nextcloud.port }}
       nodePort: {{ .Values.nextcloud.nodePort }}
-  {{- if .Values.exporter.enabled }}
     - name: metrics
       port: {{ .Values.exporter.port }}
       targetPort: {{ .Values.exporter.port }}
       nodePort: {{ .Values.exporter.nodePort }}
-  {{- end }}
   selector:
-    app: {{ .Release.Name }}-nextcloud
+    app: nextcloud-nextcloud
