--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -1,8 +1,8 @@
 # Настройки Nextcloud
 nextcloud:
-  image: nextcloud:28-apache
+  image: nextcloud:latest
   imagePullPolicy: IfNotPresent
-  port: 80
+  port: 8080
   nodePort: 30012
   adminUser: admin
   adminPassword: changeme
